[cleanup] Remove usage of deprecated wrapper types constructors
Signed-off-by: Pierre-Charles David <pierre-charles.david@obeo.fr>