@@ -236,7 +236,7 @@ public class FilterDialog
 		removeFrom.setText(REMOVE_FROM_LABEL);
 		removeFrom.setToolTipText(REMOVE_FROM);
 		removeFrom.setLayoutData(makeArrowButtonGridData(removeFrom));
-		removeFrom.setData(new Integer(REMOVE_FROM_ID));
+		removeFrom.setData(Integer.valueOf(REMOVE_FROM_ID));
 		removeFrom.addSelectionListener(buttonSelectionAdapter);
 		removeFrom.setEnabled(false);
 
@@ -244,7 +244,7 @@ public class FilterDialog
 		addTo.setText(ADD_TO_LABEL);
 		addTo.setToolTipText(ADD_TO);
 		addTo.setLayoutData(makeArrowButtonGridData(addTo));
-		addTo.setData(new Integer(ADD_TO_ID));
+		addTo.setData(Integer.valueOf(ADD_TO_ID));
 		addTo.addSelectionListener(buttonSelectionAdapter);
 		addTo.setEnabled(false);
 
@@ -252,14 +252,14 @@ public class FilterDialog
 		removeAllFrom.setText(REMOVE_ALL_LABEL);
 		removeAllFrom.setToolTipText(REMOVE_ALL);
 		removeAllFrom.setLayoutData(makeArrowButtonGridData(removeAllFrom));
-		removeAllFrom.setData(new Integer(REMOVE_ALL_FROM_ID));
+		removeAllFrom.setData(Integer.valueOf(REMOVE_ALL_FROM_ID));
 		removeAllFrom.addSelectionListener(buttonSelectionAdapter);
 		addAllTo = new Button(buttonComposite, SWT.PUSH);
 
 		addAllTo.setText(ADD_ALL_LABEL);
 		addAllTo.setToolTipText(ADD_ALL);
 		addAllTo.setLayoutData(makeArrowButtonGridData(addAllTo));
-		addAllTo.setData(new Integer(ADD_ALL_TO_ID));
+		addAllTo.setData(Integer.valueOf(ADD_ALL_TO_ID));
 		addAllTo.addSelectionListener(buttonSelectionAdapter);
 
 		// Add the possible list of filter items
